# slack-roulette

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
.chalice/: policy-ci.json
chalicelib/: __init__.py  aws.py  chalice.py  config.py  roulette.py  slack.py
tests/: strategies.py  test_app.py  test_aws.py  test_roulette.py
